# autocorrect

./: .gitignore  Cargo.toml  README.md  build.rs
.cursor/rules/: project.mdc
data/: test_words.tsv
scripts/: convert_to_tsv.py
src/: dictionary.rs  lib.rs  main.rs  suggest.rs
