[package]
name = "autocorrect"
version = "0.1.0"
edition = "2021"
build   = "build.rs"

[dependencies]
fst        = "0.4"        # FST + Levenshtein automata   [oai_citation:0‡Crates.io](https://crates.io/crates/fst?utm_source=chatgpt.com)
memmap2    = "0.9"
once_cell  = "1.19"
anyhow     = "1.0"

[build-dependencies]
fst = "0.4"               # the builder API is the same
