[package]
name = "autocorrect"
version = "0.1.0"
edition = "2021"
build   = "build.rs"

[dependencies]
fst        = { version = "0.4", features = ["levenshtein"] }
memmap2    = "0.9"
once_cell  = "1.19"
anyhow     = "1.0"

[build-dependencies]
fst = { version = "0.4", features = ["levenshtein"] }
anyhow = "1.0"
